--- a/assets/src/scss/components/header/_header.scss
+++ b/assets/src/scss/components/header/_header.scss
@@ -67,10 +67,7 @@
   }
 }
 
-.c-header__item {
-}
-
-.c-header__item--logo {
+.c-header__logo {
   width: 50%;
   text-align: center;
   padding: 32px 20% 0px 5%;
@@ -82,11 +79,11 @@
     padding: 0;
     // background-color: red;
   }
-}
 
-.c-item__logo--home {
-  @include media(tablet) {
-    width: 60%;
+  .o-image {
+    @include media(tablet) {
+      width: 60%;
+    }
   }
 }
 
