--- a/assets/src/scss/components/navigation/_navigation.scss
+++ b/assets/src/scss/components/navigation/_navigation.scss
@@ -26,8 +26,6 @@
     @include media(tablet) {
       margin: 0;
     }
-    .page_item {
-    }
   }
 }
 
